2010-06-25  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.h: Renamed tile_available() to tile_opened() for
	consistency.

2010-06-25  Jeffrey Stedfast  <fejj@novell.com>

	* deepzoomimagetilesource.h: Renamed msi_cb to
	MultiScaleImageCallback.

	* multiscaleimage.cpp: Move GetTileFade() requests out of inner
	loops.

2010-06-25  Alan McGovern  <amcgovern@novell.com>

	* layoutinformation.h: For lack of a better place, store the
	  current LayoutExceptionElement on the deployment using the
	  attached property
	  LayoutInformation::CurrentExceptionElementProperty.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/install-dialog.cpp: Explicitly disable gpu acceleration, since the
	test harness does a string replace to enable it when necessary.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* popup.cpp:
	* applier.cpp:
	* tilesource.cpp:
	* imagesource.cpp:
	* imagesource.cpp:
	* pal/gtk/im-gtk.cpp:
	* writeablebitmap.cpp:
	* pal/gtk/pal-gtk.cpp:
	* layoutinformation.cpp:
	* pal/gtk/pixbuf-gtk.cpp:
	* tabnavigationwalker.cpp:
	* pal/gtk/clipboard-gtk.cpp: Include config.h.

2010-06-24  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp: Added callback functions for deleting int
	and double pointers. We can't use g_free() for data created with
	the new operator.
	(RenderSingle): More cleanup.

	* multiscaleimage.h: Added getter for TileFadeProperty to make
	getting that value simpler in multiscaleimage.cpp.

2010-06-24  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h:
	* template.cpp|h: Change the template parsing mechanism a little
	bit, now the parser will give the template a callback function for
	parsing itself. This allows us the two different parsers to be
	transparent to the template.

2010-06-24  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (RenderCollection): Fixed a regression I
	introduced in rev 159440.

2010-06-24  Jackson Harper  <jackson@ximian.com>
