@@ -1,5 +1,8 @@
 2010-06-25  Jeffrey Stedfast  <fejj@novell.com>
 
+	* region.cpp (Draw): Swapped count and i variables to make the
+	code make more sense.
+
 	* multiscaleimage.h: Renamed tile_available() to tile_opened() for
 	consistency.
 
